--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.7",
     "tailwindcss": "^4.1.7"
   },
